--- a/app/templates/inventory_management/products.html
+++ b/app/templates/inventory_management/products.html
@@ -5,6 +5,7 @@
 {% include 'inventory_management/inventory_manager_nav.html' %}	
     <h3 class="inventory_headers">Manage Products</h3>
 	<hr class="inventory_hr">
+	{% if is_inv_admin %}
 	<div class="row sidenav" id="product_sidenav">
 		<div class="col-md-12">
 			<button type="button" class="btn btn-default hide_sidenav" aria-label="Left Align">
@@ -22,18 +23,6 @@
 					{{ form.description(class_="form-control") }}
 					{{ form.storage_req.label(class_="contol-label") }}
 					{{ form.storage_req(class_="form-control") }}
-					<!--div class="form-group  required"><label class="control-label" for="reference_number">Reference Number</label>
-						<input class="form-control ui-autocomplete-input" id="reference_number" name="reference_number" required="" type="text" value="" autocomplete="off">
-					</div>
-					<div class="form-group  required"><label class="control-label" for="name">Item Name</label>
-						<input class="form-control" id="name" name="name" required="" type="text" value="">
-					</div>
-					<div class="form-group  required"><label class="control-label" for="description">Description</label>        
-						<input class="form-control" id="description" name="description" required="" type="text" value="">        
-					</div>
-					<div class="form-group  required"><label class="control-label" for="storage_req">Storage Requirement</label>       
-						<input class="form-control" id="storage_req" name="storage_req" required="" type="text" style="width: 40%;" value="">      
-					</div-->
 				</div>
 				<div class="col-md-3">
 					{{ form.price.label(class_="contol-label") }}
@@ -42,15 +31,6 @@
 					{{ form.min_quantity(class_="form-control") }}
 					{{ form.min_expiry.label(class_="contol-label") }}
 					{{ form.min_expiry(class_="form-control") }}
-					<!--div class="form-group"><label class="control-label" for="price">Price</label>			
-						<input class="form-control" id="price" name="price" type="text" value="">			
-					</div>
-					<div class="form-group "><label class="control-label" for="min_quantity">Minimum Quantity</label>       
-						<input class="form-control" id="min_quantity" name="min_quantity" type="text" value="">        
-					</div>
-					<div class="form-group "><label class="control-label" for="min_expiry">Minimum Expiry(Months)</label>        
-						<input class="form-control" id="min_expiry" name="min_expiry" type="text" value="">        
-					</div-->
 				</div>
 				<div class="col-md-3">
 					{{ form.department.label(class_="contol-label") }}
@@ -59,39 +39,21 @@
 					{{ form.supplier(class_="form-control") }}
 					{{ form.type.label(class_="contol-label") }}
 					{{ form.type(class_="form-control") }}
-					<!--div class="form-group  required"><label class="control-label" for="department">Department</label>  
-						<select class="form-control" id="department" name="department" required="">
-						{% for d in dept %}
-						<option value='{{ d.name }}'>{{ d.name }}</option>
-						{% endfor %}
-						<option value="2">Hematology</option><option value="1">Biochemistry</option><option value="3">Parasitology</option></select>        
-					</div>
-					<div class="form-group  required"><label class="control-label" for="supplier">Supplier</label>        
-						<select class="form-control" id="supplier" name="supplier" required="">
-						{% for s in supplier %}
-						<option value='{{ s.name }}'>{{ s.name }}</option>
-						{% endfor %}
-						<option value="1">Pharmatrade</option><option value="2">al abbar</option></select>        
-					</div>
-					<div class="form-group  required"><label class="control-label" for="type">Type</label>       
-						<select class="form-control" id="type" name="type" required="">
-						{% for t in type %}
-						<option value='{{ t.name }}'>{{ t.name }}</option>
-						{% endfor %}
-						<option value="3">Reagent</option><option value="1">Control</option><option value="2">Calibrator</option></select>       
-					</div-->
 				</div>
 				<input class="btn btn-default" id="submit" name="submit" type="submit" value="Register" style="float: right; margin-bottom: 10px;">
 			</form>
 				
 		</div>
 	</div>
+	{% endif %}
 	<div class="row">
 		<div class="col-md-12">
+			{% if is_inv_admin %}
 			<button type="button" class="btn btn-default" id="open_product_sidenav" aria-label="Left Align" style="float: left;">
 				<span>Register Product</span>
 				<span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
 			</button>
+			{% endif %}
 			<table class="table table-bordered table-hover text-center">
 				<tr>
 					<th>Reference No</th>
@@ -118,9 +80,11 @@
 						<td>{{ my_p.dept_name }}</td>
 						<td>{{ my_p.type_name }}</td>
 						<td>{{ my_p.supplier_name }}</td>
+						{% if is_inv_admin %}
 						<td><a href="{{ url_for('delete_product', prod_id=my_p.product_id, comp_id=company.id) }}">
 						<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
 						</a></td>
+						{% endif %}
 					</tr>
 					{% endfor %}
 				{% endif %}
