--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -2,44 +2,101 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}
-<div class="media">
-	<table class="table table-hover">
-        <tr>
-			<div class="media-left">
-				<td width="70px" style="text-align:center;">
-					<a href="{{ url_for('user', username=post.author.username) }}">
-						{% if post.author.profile_pic %}
-						<img src="{{ post.author.profile_pic }}" alt="user profile pic" style="width: 70px;">
-						{% else %}
-						<img src="{{ post.author.avatar(70) }}" />
+<div class="row">
+	<div class="media col-md-12">
+		<table class="table table-hover">
+			<tr>
+				<div class="media-left">
+					<td width="70px" style="text-align:center;">
+						<a href="{{ url_for('user', username=post.author.username) }}">
+							{% if post.author.profile_pic %}
+							<img src="{{ post.author.profile_pic }}" alt="user profile pic" style="width: 70px;">
+							{% else %}
+							<img src="{{ post.author.avatar(70) }}" />
+							{% endif %}
+						</a>
+						<a href="{{ url_for('user', username=post.author.username) }}">{{ post.author.username }}</a>
+						<div>
+							{% if upvoted %}
+							<button type="button" class="btn btn-primary" aria-label="Left Align" style="padding:2px 8px;">
+							  <a href="{{ url_for('upvote', id=post.id) }}"><span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"style="color:white;"></span></a></button>
+							  {% else %}
+							<button type="button" class="btn btn-default" aria-label="Left Align" style="padding:2px 8px;">
+							  <a href="{{ url_for('upvote', id=post.id) }}"><span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span></a></button>
+							{% endif %}
+							{% if downvoted %}
+							<button type="button" class="btn btn-danger" aria-label="Left Align" style="padding:2px 8px;">
+							  <a href="{{ url_for('downvote', id=post.id) }}"><span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"style="color:white;"></a></span></button>
+							  {% else %}
+							  <button type="button" class="btn btn-default" aria-label="Left Align" style="padding:2px 8px;">
+							  <a href="{{ url_for('downvote', id=post.id) }}"><span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"></a></span></button>
+							  {% endif %}
+							
+							<span style="font-size: 11px;font-style:italic;color:blue;">{% if upvotes %}{{ upvotes }}{% else %}0 {% endif %} </span><span style="font-size: 11px;font-style:italic;color:red;">{% if downvotes %}{{ downvotes }}{% else %}0{% endif %}</span>
+						</div>
+					</td>
+				</div>
+					<td>
+						<div class="media-body">
+							<p>{{ post.body }}</p>
+							{% if post.title %}
+							<p><a href="{{ post.url }}" target="_blank">{{ post.title }}</a></p>
+							{% endif %}
+							{% if post.description %}
+							<p>{{ post.description }}</p>
+							{% endif %}
+						</div>
+						{% if post.image %}
+						<div class="media-right">
+							<a href="{{ post.url }}" target="_blank"><img class="media-object" src="{{ post.image }}" alt="{{ post.title }}" style="width:100px;height:100px;"></a>
+						</div>
 						{% endif %}
-					</a>
-					<a href="{{ url_for('user', username=post.author.username) }}">{{ post.author.username }}</a>
-					<div>
-						<button type="button" class="btn btn-default" aria-label="Left Align" style="padding:2px 8px;">
-						  <a href="{{ url_for('upvote', id=post.id) }}"><span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span></a></button>
-						
-						
-						<button type="button" class="btn btn-default" aria-label="Left Align" style="padding:2px 8px;">
-						  <a href="{{ url_for('downvote', id=post.id) }}"><span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"></a></span></button>
-						
-						<span style="font-size: 11px;font-style:italic;color:blue;">{% if upvotes %}{{ upvotes }}{% else %}0 {% endif %} </span><span style="font-size: 11px;font-style:italic;color:red;">{% if downvotes %}{{ downvotes }}{% else %}0{% endif %}</span>
-					</div>
-				</td>
+							<br>
+							{{ moment(post.timestamp).calendar() }}		
+					</td>			
+			</tr>
+		</table>
+		<div class="col-md-12">
+			<div class="col-md-1">
 			</div>
-				<td>
-					<div class="media-body">
-						<p>{{ post.body }}</p>
-						<p><a href="{{ post.url }}" target="_blank">{{ post.title }}</a></p>
-						<p>{{ post.description }}</p>	
+			<div class="col-md-10">
+				<form action method="post" class="form" role="form">
+					{{ form.hidden_tag() }}
+					<div class="form-group required">
+						{{ form.comment.label (class_="control-label")}}
+						<span id="comment_count" style="float:right; font-size:10px;"></span>
+						{{ form.comment(class_="form-control") }}
 					</div>
-					<div class="media-right">
-						<a href="{{ post.url }}" target="_blank"><img class="media-object" src="{{ post.image }}" alt="{{ post.title }}" style="width:100px;height:100px;"></a>
-					</div>
-						<br>
-						{{ moment(post.timestamp).calendar() }}		
-				</td>			
-        </tr>
-    </table>
+					{{ form.submit (class_="btn btn-default") }}
+				</form>
+				
+				
+			</div>
+			<div class="col-md-1">
+			</div>
+		</div>
+		
+		<div class="col-md-12" style="margin-top: 20px;">
+			<div class="col-md-1">
+			</div>
+			<div class="col-md-10">
+				{% for comment in comments %}
+					{% include '_comment.html' %}
+				{% endfor %}
+			</div>
+			<div class="col-md-1">
+			</div>
+		</div>
+		
+	</div>
 </div>
+{% endblock %}
+
+{% block scripts %}
+	{{ super() }}
+	<script>
+		$('#comment').on('keyup', function() {
+			$('#comment_count').html(this.value.length + ' characters (max 500)');
+		});
+	</script>
 {% endblock %}
