--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -46,6 +46,14 @@
                 {% else %}
                 <p><a href="{{ url_for('unfollow', username=user.username) }}">Unfollow</a></p>
                 {% endif %}
+				{% if user != current_user %}
+                <p>
+                    <a href="{{ url_for('send_message', recipient=user.username) }}">
+                         <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> Message
+                    </a>
+					
+                </p>
+                {% endif %}
             </td>
         </tr>
     </table>
