--- a/app/templates/inventory_management/inventory_overview_sample.html
+++ b/app/templates/inventory_management/inventory_overview_sample.html
@@ -3,4 +3,8 @@
 
 {% block app_content %}
 <span>Please login and create a company or affiliate yourself to one in order to access this page.</span>
+<ul>
+	<li>Click on your username.</li>
+	<li>Register a company.</li>
+</ul>
 {% endblock %}
