--- a/app/templates/calculators.html
+++ b/app/templates/calculators.html
@@ -2,20 +2,28 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}
-    {% if form %}
-    {{ wtf.quick_form(form) }}
-    <br>
-    {% endif %}
-	<nav class="navbar">
-		<ul class="nav nav-pills">
-			<li class="tablinks" onclick="openDept(event, 'Biochemistry')"><a>Biochemistry</a></li>
-			<li class="tablinks" onclick="openDept(event, 'Hematology')"><a>Hematology</a></li>
-		</ul>	
-	</nav>
-	
-	{% include 'biochemistry.html' %}
-	{% include 'hematology.html' %}
+	<div>
+		<nav>
+			<ul class="nav nav-pills" role="tablist">
+				<li role="presentation" class="active"><a href="#biochemistry" aria-controls="biochemistry" role="pill" data-toggle="pill">Biochemistry</a></li>
+				<li role="presentation"><a href="#hematology" aria-controls="hematology" role="pill" data-toggle="pill">Hematology</a></li>
+			</ul>	
 			
+		</nav>
+		<br>
+		<div class="tab-content">
+			
+				{% include 'biochemistry.html' %}
+			
+				{% include 'hematology.html' %}
+										
+		</div>
+	
+	</div>			
 {% endblock %}
+{% block scripts %}
+{{ super() }}
+<script>
 
-
+</script>
+{% endblock %}
