--- a/app/templates/company_base.html
+++ b/app/templates/company_base.html
@@ -10,45 +10,47 @@
 	
 	<nav class="navbar navbar-default">
 		<div class="container-fluid">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-				<a class="navbar-brand" href="{{ url_for('index')}}"><span><img src="/static/logo.jpg" alt="labApp logo" style="width: 22px; height: 22px;"></span><span> labApp</span></a>
-			</div>
-			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-				<ul class="nav navbar-nav">
-					
-					<li><a href="{{ url_for('quality_control', company_name=company.company_name)}}">Quality Control</a></li>
-					
-					<!--li><a href="{{ url_for('document_control', username=current_user.username) }}">Document Control</a></li-->
-					
-					<li><a href="{{ url_for('inventory_management', company_name=company.company_name)}}">Inventory Management</a></li>
-					
-					{% if is_super_admin %}
-					<li><a href="{{ url_for('admin', company_name=company.company_name)}}">Admin</a></li>
-					{% endif %}
-				</ul>
-				<ul class="nav navbar-nav text-center">
-					<li><a class="navbar-brand company_name_nav" href="{{ url_for('company', company_name=company.company_name)}}">{{ company.company_name}}</a></li>
-				</ul>
-				<ul class="nav navbar-nav navbar-right">
-					{% if current_user.is_anonymous %}
-					<li><a href="{{ url_for('login') }}">Login</a></li>
-					{% else %}
-					<li><a href="{{ url_for('index')}}">Home</a></li>
-					<li><a href="{{ url_for('user', username=current_user.username) }}">{% if current_user.profile_pic %}<span><img src="{{ current_user.profile_pic }}" alt="user profile pic" style="width: 22px; height: 22px;"></span>{% else %}<span><img src="{{ current_user.avatar(256) }}" alt="user avatar" style="width: 22px; height: 22px;"></span>{% endif %}<span> {{ current_user.username }}</span></a></li>
-					{% if current_user.new_messages() %}
-					<li><a href="{{ url_for('messages') }}"><span class="glyphicon glyphicon-envelope" aria-hidden="true" style="font-size: 20px;color:blue;"></span><span class="badge">{{ current_user.new_messages() }}</span></a></li>
-					{% else %}
-					<li><a href="{{ url_for('messages') }}"><span class="glyphicon glyphicon-envelope" aria-hidden="true" style="font-size: 20px;"></span></a></li>
-					{% endif %}
-					<li><a href="{{ url_for('logout') }}">Logout</a></li>
-					{% endif %}
-				</ul>
+			<div class="collapse navbar-collapse col-md-12" id="bs-example-navbar-collapse-1">
+				<div class="col-md-6">
+					<div class="navbar-header">
+						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+							<span class="sr-only">Toggle navigation</span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+						</button>
+						<a class="navbar-brand" href="{{ url_for('index')}}"><span><img src="/static/logo.jpg" alt="labApp logo" style="width: 22px; height: 22px;"></span><span> labApp</span></a>
+					</div>
+					<ul class="nav navbar-nav">
+						<li><a href="{{ url_for('quality_control', company_name=company.company_name)}}">Quality Control</a></li>
+						<li><a href="{{ url_for('document_control', username=current_user.username) }}">Document Control</a></li>
+						<li><a href="{{ url_for('inventory_management', company_name=company.company_name)}}">Inventory Management</a></li>
+						{% if is_super_admin %}
+						<li><a href="{{ url_for('admin', company_name=company.company_name)}}">Admin</a></li>
+						{% endif %}
+					</ul>
+				</div>
+				<div class="col-md-3">
+					<ul class="nav navbar-nav text-center">
+						<marquee><li><a class="navbar-brand company_name_nav" href="{{ url_for('company', company_name=company.company_name)}}">{{ company.company_name}}</a></li></marquee>
+					</ul>
+				</div>
+				<div class="col-md-3">
+					<ul class="nav navbar-nav navbar-right">
+						{% if current_user.is_anonymous %}
+						<li><a href="{{ url_for('login') }}">Login</a></li>
+						{% else %}
+						<li><a href="{{ url_for('index')}}">Home</a></li>
+						<li><a href="{{ url_for('user', username=current_user.username) }}">{% if current_user.profile_pic %}<span><img src="{{ current_user.profile_pic }}" alt="user profile pic" style="width: 22px; height: 22px;"></span>{% else %}<span><img src="{{ current_user.avatar(256) }}" alt="user avatar" style="width: 22px; height: 22px;"></span>{% endif %}<span> {{ current_user.username }}</span></a></li>
+						{% if current_user.new_messages() %}
+						<li><a href="{{ url_for('messages') }}"><span class="glyphicon glyphicon-envelope" aria-hidden="true" style="font-size: 20px;color:blue;"></span><span class="badge">{{ current_user.new_messages() }}</span></a></li>
+						{% else %}
+						<li><a href="{{ url_for('messages') }}"><span class="glyphicon glyphicon-envelope" aria-hidden="true" style="font-size: 20px;"></span></a></li>
+						{% endif %}
+						<li><a href="{{ url_for('logout') }}">Logout</a></li>
+						{% endif %}
+					</ul>
+				</div>
 			</div>
 		</div>
 	</nav>
