--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -2,16 +2,26 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}
-    <h1>Sign In</h1>
+    
     <div class="row">
         <div class="col-md-4">
+			<h1>Sign In</h1>
             {{ wtf.quick_form(form) }}
+			<br>
+			<p>New User? <a href="{{ url_for('register') }}">Click to Register!</a></p>
+			<p>Forgot Your Password?<a href="{{ url_for('reset_password_request') }}">Click to Reset It</a></p>
         </div>
+		<div class="col-md-2">
+		</div>
+		<div class="col-md-6">
+			<br><br>
+			<p style="border"><img src="/static/logo.jpg" alt="labApp logo" style="width: 300px; height: 300px;"></p>
+			<h1>labApp</h1>
+			<h3>The one stop app for laboratory scientists.</h3>
+		</div>
     </div>
-    <br>
-    <p>New User? <a href="{{ url_for('register') }}">Click to Register!</a></p>
-    <p>
-        Forgot Your Password?
-        <a href="{{ url_for('reset_password_request') }}">Click to Reset It</a>
-    </p>
+    
+    
+	
+	
 {% endblock %}
