--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -13,11 +13,14 @@
         </div>
 		<div class="col-md-2">
 		</div>
-		<div class="col-md-6">
+		<div class="col-md-4">
 			<br><br>
-			<p style="border"><img src="/static/logo.jpg" alt="labApp logo" style="width: 300px; height: 300px;"></p>
-			<h1>labApp</h1>
-			<h3>The one stop app for laboratory scientists.</h3>
+			<p class="text-center" style="margin-bottom: 0px;"><img src="/static/logo.jpg" alt="labApp logo" style="width: 200px; height: 200px;"></p>
+			<h1 class="text-center" style="margin-top: 0px;">labApp</h1>
+			<h3 class="text-center">The app for laboratory scientists.</h3>
+			<p style="margin-left:45px;"><span class="glyphicon glyphicon-check" aria-hidden="true" style="color:blue;"></span><span style="font-weight:bold;"> Manage inventories.</span></p>
+			<p style="margin-left:45px;"><span class="glyphicon glyphicon-check" aria-hidden="true" style="color:blue;"></span><span style="font-weight:bold;"> Calculate and create LJ graphs.</span></p>
+			<p style="margin-left:45px;"><span class="glyphicon glyphicon-check" aria-hidden="true" style="color:blue;"></span><span style="font-weight:bold;"> Clinical laboratory specific calculators.</span></p>
 		</div>
     </div>
     
