added views on inventory overview, update on consume item

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -68,7 +68,7 @@
 		{% endblock %}
 	</div>
 	
-<footer style="position: fixed;left: 0;bottom: 0;width: 100%;background-color: #efefef;  color: black;text-align: center;font-size: 12px;">© 2019 labApp All Right Reserved</footer>
+<footer style="position: fixed;left: 0;bottom: 0;width: 100%;background-color: #efefef;  color: black;text-align: center;font-size: 12px;margin-top:25px;">© 2019 labApp All Right Reserved</footer>
 {% endblock %}
 
 {% block styles %}
