--- a/app/templates/company_base.html
+++ b/app/templates/company_base.html
@@ -57,7 +57,7 @@
 {% endblock %}
 
 {% block content %}
-	<div class="container" style="margin-bottom:20px;">
+	<div class="container" style="margin-bottom:40px;">
 		{% with messages = get_flashed_messages() %}
 		{% if messages %}
 			{% for message in messages %}
@@ -70,7 +70,7 @@
 		{% block app_content %}
 		{% endblock %}
 	</div>
-<footer style="position: fixed;left: 0;bottom: 0;width: 100%;background-color: #efefef;  color: black;text-align: center;font-size: 12px;">© 2019 labApp All Right Reserved</footer>
+<footer style="position: fixed;left: 0;bottom: 0;width: 100%;background-color: #efefef;  color: black;text-align: center;font-size: 12px;margin-top:25px">© 2019 labApp All Right Reserved</footer>
 {% endblock %}
 
 {% block styles %}
