--- a/app/templates/document_control.html
+++ b/app/templates/document_control.html
@@ -2,7 +2,6 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}
-<p><a href="#" data-toggle="modal" data-target="#create_dept_modal" style="float:right;">Create Department</a></p>
 <div class="row">
 	<div class="col-md-12">
 		<div class="col-md-3">
@@ -24,45 +23,49 @@
 		</div>
 	</div>
 </div>
+<br>
 <div class="row">
-	<div class="col-md-4">
-		<ul class="nav nav-tabs" role="tablist">
+	<div class="col-md-6">
+		<p><a href="#" data-toggle="modal" data-target="#create_dept_modal" style="float:right;">Create Department</a></p>
+		<br>
+		<ul class="nav nav-tabs nav-stacked" role="tablist">
+			
 			<li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Home</a></li>
-			<li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Profile</a></li>
-			<li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Messages</a></li>
-			<li role="presentation"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">Settings</a></li>
 		</ul>
 	</div>
-	<div class="col-md-4">
+	<div class="col-md-6">
+		<p><a href="#" data-toggle="modal" data-target="#create_sop_modal" style="float:right;">Create SOP</a></p>
+			<br>
 		<div class="tab-content">
-			<li role="presentation" id="home" class="active"><a href="#homehome" aria-controls="home" role="tab" data-toggle="tab">Home</a></li>
-			<li role="presentation" id="profile"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Profile</a></li>
-			<li role="presentation" id="messages"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Messages</a></li>
-			<li role="presentation" id="settings"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">Settings</a></li>
-		</div>
-	</div>
-	 <div class="col-md-4">
-		<div class="tab-content">
-			<div role="tabpanel" class="tab-pane active" id="home">...</div>
-			<div role="tabpanel" class="tab-pane" id="profile">...</div>
-			<div role="tabpanel" class="tab-pane" id="messages">...</div>
-			<div role="tabpanel" class="tab-pane" id="settings">...</div>
+			<ul class="nav nav-tabs nav-stacked" role="tablist">
+				<li role="presentation" id="home" class="active"><a href="#" aria-controls="home" role="tab" data-toggle="tab">SOP 1</a></li>
+		</ul>
+			</ul>
 		</div>
 	</div>
 
-	
 </div>
 
 
 
 
 	
-<div class="modal fade" id="create_dept_modal" tabindex="-1" role="dialog" aria-labelledby="create_dept_modal_Label">
+<div class="modal fade" id="create_dept_modal" tabindex="-1" role="dialog" aria-labelledby="create_dept_modal_label">
   <div class="modal-dialog" role="document">
 	<div class="modal-content">
 	  <div class="modal-body">
 		<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-		{{ wtf.quick_form(form) }}
+		{{ wtf.quick_form(form1) }}
+	  </div>
+	</div>
+  </div>
+</div>
+<div class="modal fade" id="create_sop_modal" tabindex="-1" role="dialog" aria-labelledby="create_sop_modal_label">
+  <div class="modal-dialog" role="document">
+	<div class="modal-content">
+	  <div class="modal-body">
+		<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+		{{ wtf.quick_form(form2) }}
 	  </div>
 	</div>
   </div>
