--- a/app/templates/_comment.html
+++ b/app/templates/_comment.html
@@ -1,6 +1,6 @@
 <table class="table table-bordered" style=" border-collapse: separate !important;;border-radius: 1em;overflow: hidden; margin-bottom:5px;">
 	<tr>
-		<td width="25px"">
+		<td width="25px">
 		<a href="{{ url_for('user', username=comment.author.username) }}">
 			{% if comment.author.profile_pic %}
 			<img src="{{ comment.author.profile_pic }}" alt="user profile pic" style="width: 25px;">
